Frontend/Backend Optimized, UI Changed, New Icons Added

--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
             to right,
             #F06E22 30%,
             #044FA2 30%,
-            #0F5132 30%);
+            #acacac 30%);
         }
 
         h2 {
