--- a/common/academics3.html
+++ b/common/academics3.html
@@ -94,7 +94,7 @@
             </div>
             <ul class="nav-list">
               <!-- Setting the links to #! will ensure that no action takes place on click. -->
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="../index.php">Home</a></li>
               <li>
                 <a href="#!">Academics</a>
                 <ul class="nav-dropdown">
@@ -104,7 +104,7 @@
                 </ul>
               </li>
               <li><a href="./facilities.html">Features</a></li>
-              <li><a href="./notice.html">Notice</a></li>
+              <li><a href="./notice.php">Notice</a></li>
               <li><a href="./news.html">News & Events</a></li>
               <li><a href="./about-us.html">About Us</a></li>
               <li>
