--- a/common/apply.html
+++ b/common/apply.html
@@ -93,7 +93,7 @@
           </div>
           <ul class="nav-list">
             <!-- Setting the links to #! will ensure that no action takes place on click. -->
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.php">Home</a></li>
             <li>
               <a href="#!">Academics</a>
               <ul class="nav-dropdown">
@@ -103,7 +103,7 @@
               </ul>
             </li>
             <li><a href="./facilities.html">Features</a></li>
-            <li><a href="./notice.html">Notice</a></li>
+            <li><a href="./notice.php">Notice</a></li>
             <li><a href="./news.html">News & Events</a></li>
             <li><a href="./about-us.html">About Us</a></li>
             <li>
