--- a/common/facilities.html
+++ b/common/facilities.html
@@ -104,7 +104,7 @@
             </li>
             <li><a href="./facilities.html">Features</a></li>
             <li><a href="./notice.php">Notice</a></li>
-            <li><a href="./news.html">News & Events</a></li>
+            <li><a href="./news.php">News & Events</a></li>
             <li><a href="./about-us.html">About Us</a></li>
             <li>
               <a href="#!">Resources</a>
